--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     ]
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "server.js",
+  "main": "./src/server/server.js",
   "author": "",
   "license": "ISC"
 }
