--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
